--- a/worskshop_5/india_data_analysis.html
+++ b/worskshop_5/india_data_analysis.html
@@ -1627,7 +1627,8 @@ status. What are the most differentially expressed genes?</p>
 Add a colorbar for disease and BMI status.</p>
 <p>5. Conduct a pathway analysis of the top 50 DESeq2 genes using
 enrichR (through R or online). Use the “Reactome_Pathways_2024”
-database. What is are the top scoring pathways?</p>
+database. What are the top scoring pathways? (Extra) Use the
+TBSignatureProfiler to analyze the data!</p>
 <p>6. Using the well-nourished samples as your training set, develop
 Elastic Net (logistic regression), SVM, and Random Forest predictors for
 TB status. Compare the cross-validation overall accuracy for these three
